<resources>
    <string name="app_name">BirdBreeder</string>
    <string name="logo">LOGO</string>
    <string name="home">Home Page</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="no_account">Don\'t have account yet?</string>
    <string name="user_name">User name</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="forget_password">Forget your password?</string>
    <string name="gmail">Gmail</string>
    <string name="breed">Species: </string>
    <string name="dummy_cost">$100</string>
    <string name="dummy_specie">Canary</string>
    <string name="dummy_date">Jan 22, 2021</string>
    <string name="dummy_num">00</string>
    <string name="own_species">Species Owned</string>
    <string name="sale_bird">Sale Birds</string>
    <string name="shopping">Add to Cart</string>
    <string name="image_bird">Bird Image</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,PageMaker including versions of Lorem Ipsum.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offered_for_sale">Offered</string>
    <string name="offer_for_sale">Offer</string>
    <string name="mating_id">Nest ID: </string>
    <string name="more_details">View More Details</string>
    <string name="mating_date">Mating Date: </string>
    <string name="male_id">Male ID: </string>
    <string name="female_id">Female ID: </string>
    <string name="current_eggs">Current Wating Eggs</string>
    <string name="total_eggs">Total Produced Eggs</string>
    <string name="produced_chicks">Produced Chicks</string>
    <string name="edit">EDIT</string>
    <string name="mating_info">Nest Details</string>
    <string name="egg_id">Egg ID:</string>
    <string name="laid_date">Laid Date (Incubation Start Date)</string>
    <string name="expect_date">Expecting Hatching Date</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="bird_fragment_title">Birds Fragment</string>
    <string name="notification_fragment_title">Notifications</string>
    <string name="profile_fragment_title">Profile</string>
    <string name="home_fragment_title">Home</string>
    <string name="email_breeder">Email Breeder</string>
    <string name="mating_title">Mating</string>
    <string name="bird_ring_no">Ring Number</string>
    <string name="bird_id">Bird Id</string>
    <string name="birth_date">Birth Date</string>
    <string name="bird_color">Color</string>
    <string name="bird_age">Age</string>
    <string name="bird_weight">Weight</string>
    <string name="bird_from">From</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="choose_image">Choose Photo</string>
    <string name="male_ring_no">Male Ring Number</string>
    <string name="female_ring_no">Female Ring Number</string>
    <string name="mating_status">Status</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="insta">Instagram</string>
    <string name="telegram">Telegram</string>
    <string name="new_egg">New Egg</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="cost">Cost</string>
    <string name="select_image">Select Bird Image</string>
    <string name="update_note">Bird is updated</string>
    <string name="add_note">New Bird Added</string>
    <string name="check_list">Check your bird ! There is missing bird .</string>
    <string name="egg_updated">Egg is updated successfully</string>
    <string name="egg_added">Egg is added successfully</string>

    <array name="bird_status">
        <item name="sick">Sick</item>
        <item name="sold">Sold</item>
        <item name="in_rest">In Rest</item>
        <item name="in_breeding">In Breeding</item>
    </array>

    <array name="egg_status">
        <item name="failed_incubated">Failed Incubated</item>
        <item name="incubated">Incubated</item>
        <item name="unfertilized">Unfertilized</item>
        <item name="hatched_ok">Hatched Ok</item>
    </array>


    <array name="mating_status">
        <item name="in_breeding">In Breeding</item>
        <item name="in_rest">In Rest</item>
        <item name="separated">Separated</item>
    </array>
</resources>