<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/home_navigation"
        android:icon="@drawable/ic_baseline_home_24"
        android:enabled="true"
        android:title="@string/home_fragment_title"/>
    <item
        android:id="@+id/notification_navigation"
        android:icon="@drawable/ic_baseline_notifications_active_24"
        android:enabled="true"
        android:title="@string/notification_fragment_title"/>
    <item
        android:id="@+id/profile_navigation"
        android:icon="@drawable/ic_baseline_person_24"
        android:enabled="true"
        android:title="@string/profile_fragment_title"/>
    <item
        android:id="@+id/birds_navigation"
        android:icon="@drawable/ic__bird"
        android:enabled="true"
        android:title="@string/bird_fragment_title"/>


</menu>