<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".View.ui.Birds.BirdProfileActivity">

    <Button
        android:layout_margin="@dimen/eight"
        android:id="@+id/profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textSize="@dimen/text_sixteen"
        android:layout_alignParentEnd="true"/>
    <ImageView
        android:id="@+id/bird_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/two_hundred"
        android:src="@color/grey_200"/>
    <LinearLayout
        android:id="@+id/details"
        android:layout_below="@id/bird_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/eight">
            <TextView
                android:text="@string/bird_id"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/bird_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/eight"
                />

            <TextView
                android:text="@string/breed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/bird_species"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/eight"
                />
            <TextView
                android:text="@string/birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/bird_birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/eight"
                />
            <TextView
                android:text="@string/bird_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/bird_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/eight"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="@dimen/eight">
            <TextView
                android:text="@string/bird_ring_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/bird_ring"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/eight"
                />
            <TextView
                android:text="@string/bird_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/bird_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/eight"
                />
            <TextView
                android:text="@string/bird_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/bird_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/eight"
                />
            <TextView
                android:text="@string/bird_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/bird_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/eight"
                />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_margin="@dimen/eight"
        android:layout_below="@id/details"
        android:id="@+id/des"
        android:text="@string/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_below="@id/des"
        android:id="@+id/bird_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/eight"
        android:minLines="3"
        />
    <TextView
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@id/bird_image"
        android:layout_margin="@dimen/eight"
        android:id="@+id/edit_image"
        android:textStyle="bold"
        android:text="@string/choose_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>