<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/eight"
    tools:context=".View.ui.Birds.MatingProfileFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/eight">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="@dimen/forty_eight"
                android:layout_height="@dimen/forty_eight"
                android:src="@drawable/ic_mate"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/forty_eight"
                android:layout_weight="1"
                android:text="@string/mating_info"
                android:textStyle="bold"
                android:textSize="@dimen/text_twenty_four"
                android:gravity="center_vertical"
                android:layout_marginStart="@dimen/eight"/>
        </LinearLayout>

                <TextView
                    android:layout_marginTop="@dimen/eight"
                    android:id="@+id/label_id"
                    android:text="@string/mating_id"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/nest_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/eight"
                    />

                <TextView
                    android:text="@string/male_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/male_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/eight"
                    />
                <TextView
                    android:text="@string/male_ring_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <Spinner
                    android:id="@+id/male_ring_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/eight"
                    android:background="@drawable/rectangle"
                    android:popupBackground="@drawable/rectangle"
                    android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                    />
                <TextView
                    android:text="@string/total_eggs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/total_eggs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/eight"
                    />



                <TextView
                    android:text="@string/mating_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:editable="false"
                    android:id="@+id/mating_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/eight"
                    android:drawableEnd="@drawable/ic_baseline_today_24"
                    android:drawableTint="@color/blue_300"
                    />
                <TextView
                    android:text="@string/female_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/female_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/eight"
                    />
                <TextView
                    android:text="@string/female_ring_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <Spinner
                    android:id="@+id/female_ring_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/eight"
                    android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                    android:background="@drawable/rectangle"
                    />
                <TextView
                    android:text="@string/mating_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <Spinner
                    android:id="@+id/mating_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/eight"
                    android:popupBackground="@drawable/rectangle"
                    android:background="@drawable/rectangle"
                    android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                    />

                <Button
                    android:id="@+id/save_mating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:layout_gravity="end"
                    android:layout_margin="@dimen/eight"/>
            </LinearLayout>

</ScrollView>